# entl

./: .codespellrc  .coveragerc  .gitignore  .housekeeping.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  todo.txt  translation.md
.github/: dependabot.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  housekeeping.yml  straitjacket.yml  stylelint.yml
crates/entl-cli/: Cargo.toml
crates/entl-cli/src/: main.rs
crates/entl-core/: Cargo.toml
crates/entl-core/examples/: roundtrip_check.rs  sink_jsonl.rs  sink_sqlite.rs  verify_stream.rs
crates/entl-core/migrations/: 0001_init.sql  0002_macros.sql  0003_conflicts.sql  0004_hex_views.sql  0005_events.sql
crates/entl-core/migrations/duckdb/: extras.sql
crates/entl-core/migrations/duckdb/tables/: blobs.sql  commit_parents.sql  commits.sql  conflicts.sql  file_changes.sql  gh_assignees.sql  gh_check_runs.sql  gh_comments.sql  gh_commit_statuses.sql  gh_events.sql  gh_issues.sql  gh_jobs.sql  gh_labeled.sql  gh_labels.sql  gh_pr_commits.sql  gh_pr_reviews.sql  gh_pull_requests.sql  gh_requested_reviewers.sql  gh_review_comments.sql  gh_steps.sql  gh_users.sql  gh_workflow_runs.sql  gh_workflows.sql  refs.sql  repos.sql  sync_state.sql  tree_entries.sql  trees.sql
crates/entl-core/migrations/postgres/tables/: blobs.sql  commit_parents.sql  commits.sql  file_changes.sql  gh_check_runs.sql  gh_comments.sql  gh_events.sql  gh_issues.sql  gh_labeled.sql  gh_labels.sql  gh_pr_commits.sql  gh_pr_reviews.sql  gh_pull_requests.sql  gh_requested_reviewers.sql  gh_review_comments.sql  gh_users.sql  gh_workflow_runs.sql  refs.sql  tree_entries.sql  trees.sql
crates/entl-core/migrations/sqlite/tables/: blobs.sql  commit_parents.sql  commits.sql  file_changes.sql  gh_check_runs.sql  gh_comments.sql  gh_events.sql  gh_issues.sql  gh_labeled.sql  gh_labels.sql  gh_pr_commits.sql  gh_pr_reviews.sql  gh_pull_requests.sql  gh_requested_reviewers.sql  gh_review_comments.sql  gh_users.sql  gh_workflow_runs.sql  refs.sql  tree_entries.sql  trees.sql
crates/entl-core/src/: arrow_bridge.rs  binding.rs  conflicts.rs  db.rs  diff.rs  driver.rs  extract.rs  gitops.rs  gitwrite.rs  ingest.rs  lib.rs  migrations.rs  objects.rs  pull.rs  rebuild.rs  schema_gen.rs  sink.rs  stream.rs
crates/entl-core/src/github/: actions.rs  checks.rs  events.rs  graphql.rs  mod.rs
crates/entl-node/: .gitignore  Cargo.toml  arrow.test.ts  biome.json  coverage.test.ts  gen-tables.ts  index.d.ts  introspect.ts  matrix.test.ts  package.json  schema.gen.ts  schema.ts  sync.test.ts  sync.ts  tables.gen.ts  test-fixtures.ts
crates/entl-node/src/: core_impl.rs  generated.rs  lib.rs
crates/entl-python/: .gitignore  Cargo.toml  gen_models.py  pyproject.toml
crates/entl-python/python/entl/: __init__.py  models.py
crates/entl-python/src/: core_impl.rs  generated.rs  lib.rs
crates/entl-python/tests/: conftest.py  test_arrow.py  test_matrix.py  test_models.py  test_sink.py
crates/entl-ruby/: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  extconf.rb
crates/entl-ruby/src/: core_impl.rs  generated.rs  lib.rs
crates/entl-ruby/test/: test_entl.rb
crates/entl-schema/: Cargo.toml
crates/entl-schema/src/: lib.rs
crates/entl-testkit/: Cargo.toml
crates/entl-testkit/src/: forge.rs  forge_gen.rs  generate.rs  lib.rs  materialize.rs  mock.rs  reassemble.rs  world.rs
crates/entl-testkit/tests/: forge.proptest-regressions  forge.rs  materialize.rs  roundtrip.rs
crates/fluessig/: .gitignore  Cargo.toml  DESIGN.md  api.json  catalog.json  entl.tsp  plan.txt  schema_docs.json
crates/fluessig/emitter/: emit.mjs  test.mjs
crates/fluessig/spike/: catalog.json  decorators.js  extract.mjs  gen.mjs
crates/fluessig/src/: api.rs  bindgen.rs  catalog.rs  codegen.rs  data.rs  ir.rs  lib.rs  sql.rs
crates/fluessig/src/bindgen/: mod.rs  node.rs  python.rs  ruby.rs
crates/fluessig/tests/: entl_catalog.rs
notes/: design.md  perf-inflate-research-brief.md  purpose.md
notes/design/: analysis.md  arrow-ipc.md  cli.md  docs.md  engine.md  multidb.md  multilibrary.md  overall.md  testing.md
schema/: api.json  catalog.json  entl.tsp
scripts/: coverage.sh  dev.sh  gen.sh
site/: README.md  examples.test.ts  next.config.mjs  package.json  source.config.ts  tsconfig.json  wrangler.jsonc
site/content/blog/: entl-read-layer.mdx
site/content/docs/: getting-started.mdx  index.mdx  meta.json
site/content/docs/explanation/: architecture.mdx  meta.json
site/content/docs/guides/: cookbook.mdx  meta.json  querying.mdx  sync-postgres.mdx
site/content/docs/reference/: cli.mdx  meta.json  node-api.mdx  rust-api.mdx  schema.mdx
site/scripts/: gen-reference.ts
site/src/app/: global.css  layout.tsx  page.tsx
site/src/app/[lang]/: layout.tsx
site/src/app/[lang]/(home)/: layout.tsx  page.tsx
site/src/app/[lang]/blog/: layout.tsx  page.tsx
site/src/app/[lang]/blog/[slug]/: page.tsx
site/src/app/[lang]/docs/: layout.tsx
site/src/app/[lang]/docs/[[...slug]]/: page.tsx
site/src/app/api/search/: route.ts
site/src/app/llms.mdx/docs/[[...slug]]/: route.ts
site/src/app/llms.txt/: route.ts
site/src/app/og/docs/[...slug]/: route.tsx
site/src/components/: embroidery-band.tsx  mdx.tsx  provider.tsx  search.tsx
site/src/lib/: i18n.ts  layout.shared.tsx  shared.ts  source.ts
