[workspace]
resolver = "2"
members = ["crates/entl-core", "crates/entl-cli", "crates/entl-node", "crates/entl-python", "crates/entl-ruby", "crates/entl-testkit", "crates/fluessig"]
# entl-node (napi) and entl-python (PyO3) build via their own toolchains
# (@napi-rs/cli / maturin), not plain `cargo build`, so keep them out of the
# default set to keep CLI/core builds fast. fluessig is pure Rust → default.
default-members = ["crates/entl-core", "crates/entl-cli", "crates/fluessig"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "thin"

# release + debug symbols, for profiling (samply/flamegraph). Build with
# `cargo build --profile profiling`; binary at target/profiling/entl.
[profile.profiling]
inherits = "release"
debug = true
strip = false
