[workspace]
resolver = "2"
members = ["crates/entl-core", "crates/entl-cli", "crates/entl-node", "crates/entl-python", "crates/entl-ruby", "crates/entl-testkit"]
# entl-node (napi) and entl-python (PyO3) build via their own toolchains
# (@napi-rs/cli / maturin), not plain `cargo build`, so keep them out of the
# default set to keep CLI/core builds fast. The schema tool (fluessig) now lives
# in its own repo (github.com/zmaril/fluessig); entl invokes it at codegen time
# via scripts/gen.sh (see the schema convention in AGENTS.md).
default-members = ["crates/entl-core", "crates/entl-cli"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "thin"

# Faster local/CI dev + test builds. `test` inherits `dev`, so this covers
# `cargo test`/`nextest` too. Line tables keep backtraces readable while
# skipping most debuginfo codegen; unpacked split-debuginfo skips the slow
# dsymutil pass on macOS. Dependencies drop debuginfo entirely — you rarely
# step through them, and it shrinks link time and the target dir noticeably.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

# release + debug symbols, for profiling (samply/flamegraph). Build with
# `cargo build --profile profiling`; binary at target/profiling/entl.
[profile.profiling]
inherits = "release"
debug = true
strip = false
