[workspace]
resolver = "2"
members = ["crates/entl-core", "crates/entl-cli", "crates/entl-node", "crates/entl-python", "crates/entl-ruby", "crates/entl-testkit"]
# entl-node (napi) and entl-python (PyO3) build via their own toolchains
# (@napi-rs/cli / maturin), not plain `cargo build`, so keep them out of the
# default set to keep CLI/core builds fast. The schema tool (fluessig) now lives
# in its own repo (github.com/zmaril/fluessig); entl invokes it at codegen time
# via scripts/gen.sh (see the schema convention in AGENTS.md).
default-members = ["crates/entl-core", "crates/entl-cli"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

# The shared streaming-runtime contract (`Poll` / `PollStream`) that fluessig's
# generated binding surfaces import (`use fluessig_runtime::{Poll, PollStream};`).
# It ships from the fluessig repo; pin it to the SAME rev the codegen tool is
# pinned to (FLUESSIG_REF in .github/workflows/ci.yml + scripts/gen.sh's
# $FLUESSIG_DIR) so the runtime contract and the emitter never drift. Only the
# three binding crates (node/python/ruby) depend on it; core/cli never do, so the
# default `cargo build` still needs nothing from fluessig at build time.
[workspace.dependencies]
fluessig-runtime = { git = "https://github.com/zmaril/fluessig", rev = "32802a6d5164dfc77345db7e094cc9c94f9341e9" }

[profile.release]
lto = "thin"

# Faster local/CI dev + test builds. `test` inherits `dev`, so this covers
# `cargo test`/`nextest` too. Line tables keep backtraces readable while
# skipping most debuginfo codegen; unpacked split-debuginfo skips the slow
# dsymutil pass on macOS. Dependencies drop debuginfo entirely — you rarely
# step through them, and it shrinks link time and the target dir noticeably.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

# release + debug symbols, for profiling (samply/flamegraph). Build with
# `cargo build --profile profiling`; binary at target/profiling/entl.
[profile.profiling]
inherits = "release"
debug = true
strip = false
