[package]
name = "entl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine: git + GitHub data into DuckDB."

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
crossbeam-channel = "0.5.15"
duckdb = { version = "1.10504.0", features = ["bundled", "appender-arrow"] }
futures = "0.3.32"
gix = { version = "0.85.0", features = ["merge"] }
gix-imara-diff = { version = "0.2.3", features = ["unified_diff"] }
http = "1.4.2"
native-tls = "0.2"
octocrab = "0.53.1"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
rayon = "1.12.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
