[package]
name = "entl-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node-API (napi-rs) binding: the entl engine, in-process in Node/Bun."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
entl-core = { path = "../entl-core" }
serde_json = "1.0.150"
anyhow = "1"

[build-dependencies]
napi-build = "2"
