[package]
name = "entl-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node-API (napi-rs) binding: the entl engine, in-process in Node/Bun."

[lib]
crate-type = ["cdylib"]

[dependencies]
# `tokio_rt` gates the streaming surface the generated binding uses: napi's
# re-exported `tokio` (spawn_blocking), `AsyncGenerator`, and the
# `create_async_iterator` that `#[napi(async_iterator)]` expands to — the napi
# analogue of python's pyo3-async-runtimes / ruby's async wiring.
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
entl-core = { path = "../entl-core" }
# the shared streaming contract (Poll/PollStream) the generated surface imports
fluessig-runtime = { workspace = true }
serde_json = "1.0.150"
anyhow = "1"

[build-dependencies]
napi-build = "2"
