[package]
name = "entl-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python (PyO3) binding: the entl engine, in-process in Python."

[lib]
# The compiled extension is `entl._entl`; the pure-Python `python/entl/` package (mixed maturin
# layout) re-exports it and adds the SQLAlchemy models.
name = "_entl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
entl-core = { path = "../entl-core" }
# the shared streaming contract (Poll/PollStream) the generated surface imports
fluessig-runtime = { workspace = true }
# the async-runtime wiring the generated STREAMING surface needs (the pyo3 analogue
# of napi's tokio_rt): pyo3-async-runtimes bridges the poll future to asyncio via
# `future_into_py`, and tokio drives the blocking poll off the event loop via
# `spawn_blocking`. Pin pyo3-async-runtimes to pyo3's minor (0.29).
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
anyhow = "1"
serde_json = "1"
