[package]
name = "entl-ruby"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ruby (Magnus) binding: the entl engine, in-process in Ruby."

[lib]
# Ruby loads `entl.bundle`; the crate lib is `entl` so Magnus emits `Init_entl`.
name = "entl"
crate-type = ["cdylib"]

[dependencies]
# the `bytes` feature crosses bytes::Bytes as a binary Ruby String (Arrow IPC payloads)
magnus = { version = "0.8", features = ["bytes"] }
bytes = "1"
entl-core = { path = "../entl-core" }
# the shared streaming contract (Poll/PollStream) the generated surface imports
fluessig-runtime = { workspace = true }
anyhow = "1"
serde_json = "1"
